apps/haenu/chatgpt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatgpt
  namespace: haenu
  labels:
    app: chatgpt
spec:
  selector:
    matchLabels:
      app: chatgpt
  template:
    metadata:
      labels:
        app: chatgpt
    spec:
      containers:
        - name: chatgpt
          image: hyeonwoo5342/chatgpt:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "200Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 35
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "15"]
      imagePullSecrets:
        - name: dockerhub-secret
