apps/haenu/chatgpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitchzzk-api
  namespace: haenu
  labels:
    app: twitchzzk-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: twitchzzk-api
