apps/haenu/chatgpt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatgpt-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: chatgpt.haenu.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: chatgpt
                port:
                  number: 3000
